# chat_ui_rust

./: CLAUDE.md  Cargo.toml  PLAN.md  TODOS.md  design_doc.md
src/: app.rs  app_event.rs  http_server.rs  main.rs  user.rs
