[package]
name = "chat_ui_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
futures-util = "0.3.32"
chat_websocket_service_rust = {git="https://github.com/hotlatteiceamericano/chat_websocket_service_rust.git"}
serde_json = "1.0.149"
serde = "1.0.228"
