[package]
name = "chat_ui_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
futures-util = "0.3.32"
serde_json = "1.0.149"
serde = "1.0.228"
color-eyre = "0.6.5"
chat_common = {git="https://github.com/hotlatteiceamericano/chat_common", features = ["mongodb"]}
reqwest = {version = "0.12", features = ["json"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"
dirs = "6.0.0"
